infrastructure/base/configs/cilium/network-policies/commafeed.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: commafeed-network-policy
  namespace: workloads
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: commafeed
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/component: app
            app.kubernetes.io/part-of: commafeed
      toPorts:
        - ports:
            - port: "5432"
    - fromCIDRSet:
        - cidr: 192.168.178.22/28
      toPorts:
        - ports:
            - port: "80"
        - ports:
            - port: "443"
  egress:
    # - toEndpoints:
    #     - matchLabels:
    #         io.kubernetes.pod.namespace: kube-system
    #         k8s-app: kube-dns
    #   toPorts:
    #     - ports:
    #         - port: "53"
    #           protocol: UDP
    #       rules:
    #         dns:
    #           - matchPattern: "*"
    # - toEntities:
    #     - world
    #   toPorts:
    #     - ports:
    #         - port: "443"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: database
            app.kubernetes.io/part-of: commafeed
      toPorts:
        - ports:
            - port: "5432"
