infrastructure/base/configs/cilium/network-policies/deny-all-workloads.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all-workloads
  namespace: workloads
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
